--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.0.9",
+    "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/material-top-tabs": "^6.0.6",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
@@ -22,7 +23,11 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-country-flag": "^1.1.4",
+    "react-native-currency-input": "^1.0.1",
+    "react-native-dropdown-picker": "^5.3.0",
+    "react-native-gesture-handler": "~2.1.0",
     "react-native-pager-view": "5.4.9",
+    "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-tab-view": "^3.1.1",
