--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/material-top-tabs": "^6.0.6",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
+    "@react-navigation/stack": "^6.0.11",
     "axios": "^0.24.0",
     "events": "^3.3.0",
     "expo": "~44.0.0",
@@ -26,6 +27,7 @@
     "react-native-currency-input": "^1.0.1",
     "react-native-dropdown-picker": "^5.3.0",
     "react-native-gesture-handler": "~2.1.0",
+    "react-native-material-buttons": "^0.6.0",
     "react-native-pager-view": "5.4.9",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
