more things have been done

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "currencyConverter",
-    "slug": "currencyConverter",
+    "name": "M.R.N.G.A.",
+    "slug": "MRNGA",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
