--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "currencyconverter",
+  "name": "mrnga",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -29,6 +29,7 @@
     "react-native-gesture-handler": "~2.1.0",
     "react-native-material-buttons": "^0.6.0",
     "react-native-pager-view": "5.4.9",
+    "react-native-paper": "^4.11.2",
     "react-native-reanimated": "~2.3.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
