--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-firebase/app": "^14.3.0",
+    "@react-native-firebase/auth": "^14.3.0",
+    "@react-native-google-signin/google-signin": "^7.0.4",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/material-top-tabs": "^6.0.6",
@@ -19,9 +24,17 @@
     "axios": "^0.24.0",
     "events": "^3.3.0",
     "expo": "~44.0.0",
+    "expo-app-auth": "~11.1.0",
+    "expo-auth-session": "~3.5.0",
+    "expo-google-app-auth": "~8.3.0",
+    "expo-google-sign-in": "~10.1.0",
+    "expo-random": "~12.1.1",
     "expo-status-bar": "~1.2.0",
+    "expo-web-browser": "~10.1.0",
+    "firebase": "^9.6.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-firebase-hooks": "^5.0.2",
     "react-native": "0.64.3",
     "react-native-country-flag": "^1.1.4",
     "react-native-currency-input": "^1.0.1",
