--- a/package.json
+++ b/package.json
@@ -28,14 +28,17 @@
     "expo-auth-session": "~3.5.0",
     "expo-google-app-auth": "~8.3.0",
     "expo-google-sign-in": "~10.1.0",
+    "expo-linking": "~3.0.0",
     "expo-random": "~12.1.1",
     "expo-status-bar": "~1.2.0",
     "expo-web-browser": "~10.1.0",
     "firebase": "^9.6.6",
+    "jwt-decode": "^3.1.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-firebase-hooks": "^5.0.2",
     "react-native": "0.64.3",
+    "react-native-auth0": "^2.13.0",
     "react-native-country-flag": "^1.1.4",
     "react-native-currency-input": "^1.0.1",
     "react-native-dropdown-picker": "^5.3.0",
